# softchat

./: .gitignore  CMakeLists.txt  Chat_Soft.sln  README.md  xmake.lua
Client/: Client.vcxproj  Client.vcxproj.filters  addfriendgui.cpp  addfriendgui.h  chatframe.cpp  chatframe.h  data.cpp  data.h  extern.h  logingui.cpp  logingui.h  main.cpp  maingui.cpp  maingui.h  registergui.cpp  registergui.h  tcpsocket.cpp  tcpsocket.h
Client/GeneratedFiles/: qrc_client.cpp
Server/: Server.vcxproj  Server.vcxproj.filters  clientthread.cpp  clientthread.h  main.cpp  server.cpp  server.h  tcpsocket.cpp  tcpsocket.h
Server/GeneratedFiles/: qrc_server.cpp
client/: addfriendgui.h  chatframe.cpp  chatframe.h  data.cpp  data.h  extern.h  main.cpp  maingui.cpp  registergui.cpp
client/gui/: addfriendgui.cpp  addfriendgui.h  chatframe.cpp  chatframe.h  logingui.cpp  logingui.h  maingui.cpp  maingui.h  registergui.cpp  registergui.h
server/: main.cpp  server.cpp  server.h
